# Web-App-MAI

./: README.md  pyproject.toml
lab_0/: Makefile  pyproject.toml
my_apps/app/: __init__.py
my_apps/app/routes/: hello_world_route.py  users_route.py
my_apps/app/templates/: base.html  users.html
