[tool.poetry]
name = "lab_0"
version = "0.1.0"
description = ""
authors = ["Rodion Petrov <petrov.rodion@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
